--- a/src/css/email.css
+++ b/src/css/email.css
@@ -1,3 +1,15 @@
-#email{
-    width:100%;
+#email {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url(../assets/images/background/fundo_email.gif);
+    margin:10px 0;
+}
+#email div input{
+    border-radius: 10px;
+}
+
+#email div button{
+    border-radius: 10px;
 }
