--- a/src/css/header.css
+++ b/src/css/header.css
@@ -17,7 +17,7 @@ header{
     width:50%;
 }
 #header_linguas a{
-    margin: 10px;
+    margin: 3%;
 }
 
 /*Conta area begin*/
@@ -30,11 +30,11 @@ header{
 }
 
 #header_conta p{
-    margin:0 10px;
+    margin:0 3%;
 }
 /*Midias area begin*/
 #header_midias{
-    background-image: linear-gradient(#ffffff, #000000);
+    background-image: linear-gradient(#ffffff,#919191, #000000);
     /*background-color: #000000;*/
     color: #ffffff;
     display: flex;
@@ -45,17 +45,17 @@ header{
     height:100px;
 }
 #header_midias h3{
-    margin-left:10px;
+    margin-left:3%;
 }
 
 #header_midias div {
     height:25px;
     width:25px;
-    margin:10px;
+    margin:3%;
 }
 /*Nav area begin*/
 nav{
-    background-image: linear-gradient(#ffffff, #000000);
+    background-image: linear-gradient(#ffffff,#919191,#000000);
     /*background-color: #000000;*/
     display: flex;
     flex-wrap: wrap;
@@ -63,9 +63,11 @@ nav{
     align-items: center;
     width:50%;
     height:100px;
+    font-weight:500;
 }
 nav a{
-    margin:0 10px;
+    margin:0 3%;
+    
 }
 
 @media (max-width:900px){
@@ -78,11 +80,13 @@ nav a{
         justify-content: space-around;
     }
     #header_midias{
+        background-image: linear-gradient(#ffffff, #919191);
         height:auto;
         width:100%;
         justify-content: space-around;
     }
     nav{
+        background-image: linear-gradient(#919191, #000000);
         height:auto;
         width: 100%;
     }
