--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -17,9 +17,16 @@ footer figure img{
 .footer_left{
     margin:0 5%;
 }
-.footer_left a{
+.footer_left figure{
+    display:flex;
+    flex-direction: column;
     margin:3%;
 }
+.footer_left figure a img{
+    width:100px;
+    height:60px;
+}
+
 .footer_right{
     margin:0 5%;
 }
@@ -39,11 +46,6 @@ footer figure img{
         justify-content: center;
     }
     .footer_left h2{
-        display: flex;
-        width:100%;
-        justify-content: center;
-    }
-    .footer_left a{
         display: flex;
         width:100%;
         justify-content: center;
