Adicionei animações em descrição

--- a/src/css/descricao.css
+++ b/src/css/descricao.css
@@ -1,10 +1,7 @@
 #descricao{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     width:100%;
-    height:300px;
     font-weight: 800;
 }
 
@@ -12,27 +9,58 @@
     background-repeat: no-repeat;
     background-size:cover;
     width:100%;
-    height:16.66%;
+    height:40px;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
 .descricao_text1{
     background-image: url(../assets/images/background/descricao1.jpeg);
+    transition:0.5s;
 }
 .descricao_text2{
     background-image: url(../assets/images/background/descricao2.jpeg);
+    transition:0.5s;
 }
 .descricao_text3{
     background-image: url(../assets/images/background/descricao3.jpeg);
+    transition:0.5s;
 }
 .descricao_text4{
     background-image: url(../assets/images/background/descricao4.jpeg);
+    transition:0.5s;
 }
 .descricao_text5{
     background-image: url(../assets/images/background/descricao5.jpeg);
+    transition:0.5s;
 }
 .descricao_text6{
     background-image: url(../assets/images/background/descricao6.jpeg);
+    transition:0.5s;
+}
+
+#descricao div:hover{
+    height:300px;
+}
+
+.descricao_text1:hover{
+    background-image: url(../assets/images/background/descricao11.jpeg);
+}
+.descricao_text2:hover{
+    background-image: url(../assets/images/background/descricao22.jpeg);
+}
+.descricao_text3:hover{
+    background-image: url(../assets/images/background/descricao33.jpeg);
+}
+.descricao_text4:hover{
+    background-image: url(../assets/images/background/descricao44.jpeg);
+}
+.descricao_text5:hover{
+    background-image: url(../assets/images/background/descricao55.jpeg);
+}
+.descricao_text6:hover{
+    background-image: url(../assets/images/background/descricao66.jpeg);
 }
 
