--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,7 @@ body{
     font-family:'Source Sans Pro', sans-serif;
     display:flex;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
 }
 a{
