--- a/src/css/email.css
+++ b/src/css/email.css
@@ -30,6 +30,15 @@
     #email_text_background{
         padding-bottom: 5%;
         padding-top: 5%;
+        margin-bottom: 4%;
+        margin-top: 1.5%;
+        margin-left:5%;
+    }
+    #user_name{
+        margin-bottom:1%;
+    }
+    #email{
+        background-image: none;
     }
 }
 
