--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,6 +10,7 @@ body{
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 a{
     text-decoration: none;
